Minor changes to js

--- a/templates/styLing.html
+++ b/templates/styLing.html
@@ -131,7 +131,7 @@ function HSVtoRGB(h, s, v) {
       span.style.paddingRight='5px';
       span.style.display='inline-block';
       if(ind >= 30){
-        var val = probs.probs[ind];
+        var val = probs.probs[ind-30];
         var hue = val*180;  // go from green to red
         var saturation = val*50;   // fade to white as it approaches 50
         var c =HSVtoRGB(hue,saturation,100);
