--- a/templates/styLing.html
+++ b/templates/styLing.html
@@ -123,7 +123,7 @@ function HSVtoRGB(h, s, v) {
 
 var progressBar = $('#progress-bar');
 var message = $('#message');
-var fluency = document.getElementById('fluency'); s
+var fluency = document.getElementById('fluency'); 
 fluency.style.display='none';
 
 
