--- a/templates/styLing.html
+++ b/templates/styLing.html
@@ -154,7 +154,7 @@ function createHeatMap(tokens, probs, orig){
         $('#display').html('Sending...');
 
         $.ajax({
-            url: 'https://ec2-34-250-249-101.eu-west-1.compute.amazonaws.com:8888/',
+            url: 'http://ec2-34-250-249-101.eu-west-1.compute.amazonaws.com:8888/',
             type: 'post',
             dataType: 'json',
             success: function (data) {
